--- a/charts/templates/charts/index.html
+++ b/charts/templates/charts/index.html
@@ -5,18 +5,61 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.6.0/dist/chart.min.js"></script>
-   <title>Document</title>
+   <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+   <title>Histórico de Cotações</title>
 </head>
 
 <body>
-   <h1>Cotações de ###################</h1>
+   <div class="container text-center pt-5">
+      <h1>Cotação Histórica de {{par_moedas|safe}}</h1>
+         <p>Cotação {{par_moedas|safe}} período de  {{qtd_dias|safe}} dias.</p>
+   </div>
 
-   <canvas id="myChart" width="100" height="30hv"></canvas>
+
+      <div class="container pt-5">
+      <div class="row" >
+         <div class="col-lg-6 mb-4">
+            <div class="card">
+               <div class="card-body">
+               <h5 class="card-title">Exibição em Chart Js</h5>
+
+                  <canvas id="myChart" ></canvas>
+               
+               </div>
+            </div>
+         </div>
+
+
+
+         <div class="col-lg-6 mb-4">
+            <div class="card">
+               <div class="card-body">
+                  <h5 class="card-title">Exibição em Apex Chart</h5>
+                  
+                  
+                  <div id="chart" >
+               </div>
+            </div>
+         </div>
+
+
+      </div>
+
+   </div>
+
+
+
+   
+
+   
+   
    <script>
+      // ChartJs 
+      var lista_datas = {{ lista_datas | safe }};
+      var lista_cotacoes = {{ lista_cotacoes | safe }};
 
-      var lista_datas = {{lista_datas|safe}};
-      var lista_cotacoes = {{lista_cotacoes|safe}};
 
       // console.log(lista_datas);
 
@@ -53,24 +96,55 @@
       });
    </script>
 
+   <script>
+      // Apex Chart
+      var options = {
+         chart: {
+            type: 'line'
+         },
+         stroke: {
+            width: 2
+         },
+         series: [{
+            name: 'Cotações',
+            data: lista_cotacoes
+         }],
+         xaxis: {
+            categories: lista_datas
+         },
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+         grid: {
+            row: {
+                  colors: ['#e5e5e5', 'transparent'],
+                  opacity: 0.5
+            }, 
+            column: {
+                  colors: ['#f8f8f8', 'transparent'],
+            }, 
+            xaxis: {
+               lines: {
+                  show: true
+               }
+            },
+            yaxis: {
+               lines: {
+                  show: true
+               }
+            },
+            padding: {
+               top: 0,
+               right: 0,
+               bottom: -30,
+               left: 0
+            }, 
+         },
+      }
+      var chart = new ApexCharts(document.querySelector("#chart"), options);
+      chart.render();
+   </script>
+   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 </body>
 
