--- a/charts/templates/charts/index.html
+++ b/charts/templates/charts/index.html
@@ -17,12 +17,16 @@
          <p>Cotação {{par_moedas|safe}} período de  {{qtd_dias|safe}} dias.</p>
    </div>
    
+
+   <!--  class oculta d-none
+      também diminuir altura
+   --> 
    <div class="container pt-5">
       <div class="row" >
-         <div class="col-lg-6 mb-4">
+         <div class="col-lg-6 mb-4 ">
             <div class="card">
                <div class="card-body">
-                  <h5 class="card-title">{{par_moedas|safe}} /  {{qtd_dias|safe}} dias.</h5>
+                  <h5 class="card-title">{{par_moedas|safe}} /  {{qtd_dias|safe}} dias</h5>
                   
                   <canvas id="myChart" ></canvas>
                   <br>
@@ -34,7 +38,7 @@
          <div class="col-lg-6 mb-4">
             <div class="card">
                <div class="card-body">
-                  <h5 class="card-title">{{par_moedas|safe}} /  {{qtd_dias|safe}} dias.</h5>
+                  <h5 class="card-title">{{par_moedas|safe}} /  {{qtd_dias|safe}} dias</h5>
                   <div id="chart" >
                   </div>
                   Exibição em Apex Chart
@@ -42,40 +46,44 @@
             </div>
          </div>
       </div>
-      
+
+
       <div class="col-12">
          <div class="card">
             <div class="card-body">
-               <h5 class="card-title">Selecione moeda e período </h5>
+               <h5 class="card-title">Selecione outra moeda e/ou período para exibição</h5>
                <div class="container">
                   <form action="{% url 'cotacoes:home'  %}">
-                  <label for="cars">Moeda Cotação:</label>
-                  <select name="par_moedas_form" id="par_moedas_form">
-                     <option value="USD-BRL">USD-BRL</option>
-                     <option value="BTC-BRL">BTC-BRL</option>
-                     <option value="ETH-BRL">ETH-BRL</option>
-                     <option value="EUR-BRL">EUR-BRL</option>
-                  </select>
-                  <label for="cars">Dias Histórico:</label>
-                  <select name="dias_form" id="dias_form">
-                     <option value="5">5</option>
-                     <option value="10">10</option>
-                     <option value="30">30</option>
-                     <option value="60">60</option>
-                     <option value="90">90</option>
-                     <option value="120">120</option>
-                     <option value="180">180</option>
-                  </select>
-                  <input type="submit" value="Submit">
+                  <div class="form-row">
+                     <div class="form-group col-md-8">
+                        <label for="par_moedas_form">Moeda</label>
+                        <select name="par_moedas_form" id="par_moedas_form" class="form-control">
+                           <option value="USD-BRL">USD-BRL</option>
+                           <option value="BTC-BRL">BTC-BRL</option>
+                           <option value="ETH-BRL">ETH-BRL</option>
+                           <option value="EUR-BRL">EUR-BRL</option>
+                        </select>
+                     </div>
+                     <div class="form-group col-md-4">
+                        <label for="dias_form">Dias</label>
+                        <select name="dias_form" id="dias_form" class="form-control">
+                                 <option value="5">5</option>
+                                 <option value="10">10</option>
+                                 <option value="30">30</option>
+                                 <option value="60">60</option>
+                                 <option value="90">90</option>
+                                 <option value="120">120</option>
+                                 <option value="180">180</option>
+                        </select>
+                     </div>
+                  </div>
+                  <button type="submit" class="btn btn-primary">Selecionado</button>
                   </form>
                </div>
             </div>
          </div>
       </div>
-      
-      
-      
-      
+      <br>
       
    <script>
       // ChartJs 
