--- a/charts/templates/charts/pages/home.html
+++ b/charts/templates/charts/pages/home.html
@@ -1,27 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'charts/base.html' %}
 
-<head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-   <script src="https://cdn.jsdelivr.net/npm/chart.js@3.6.0/dist/chart.min.js"></script>
-   <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-   <title>Histórico de Cotações</title>
-</head>
+{% block content %}
 
-<body>
-   <div class="container text-center pt-5">
-      <h1>Cotação {{nome_moeda}}</h1>
-         <p>Cotação {{par_moedas}} - {{nome_moeda}} período de  {{qtd_dias}} dias.</p>
+
+<div class="jumbotron jumbotron-fluid">
+   <div class="container text-center">
+      <h1 class="display-4">Cotação {{nome_moeda}}</h1>
+      <p class="lead">Cotação {{par_moedas}} - {{nome_moeda}} últimos {{qtd_dias}} dias.</p>
    </div>
-   
+</div>
+
+
 
    <!--  class oculta d-none
       também diminuir altura
    --> 
-   <div class="container pt-5">
+   <div class="container">
       <div class="row" >
          <div class="col-lg-6 mb-4 ">
             <div class="card">
@@ -55,7 +49,7 @@
                <div class="container">
                   <form action="{% url 'cotacoes:home'  %}">
                   <div class="form-row">
-                     <div class="form-group col-md-8">
+                     <div class="form-group col-md-4">
                         <label for="par_moedas_form">Moeda</label>
 
                         <select name="par_moedas_form" id="par_moedas_form" class="form-control">
@@ -76,8 +70,11 @@
                                  <option value="180">180</option>
                         </select>
                      </div>
+                     <div class="col-auto">
+                        <br>
+                        <button type="submit" class="btn btn-primary mt-2">Selecionar</button>
+                     </div>
                   </div>
-                  <button type="submit" class="btn btn-primary">Selecionar</button>
                   </form>
                </div>
             </div>
@@ -111,9 +108,7 @@
                   borderWidth: 2,
                   pointRadius: 1,
                   pointHoverRadius: 15
-
                },
-
             ]
          },
          options: {
@@ -176,6 +171,4 @@
    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-</body>
-
-</html>
+{% endblock %}
