--- a/charts/templates/charts/pages/home.html
+++ b/charts/templates/charts/pages/home.html
@@ -12,45 +12,11 @@
 
 
 
-   <!--  class oculta d-none
-      também diminuir altura
-   --> 
-   <div class="container">
-      <div class="row" >
-         <div class="col-lg-6 mb-4 ">
-            <div class="card">
-               <div class="card-body">
-                  <h5 class="card-title">{{nome_moeda}} - {{par_moedas}} /  {{qtd_dias}} dias</h5>
-                  
-                  <canvas id="myChart" ></canvas>
-                  <br>
-                  Exibição em Chart Js
-               </div>
-            </div>
-         </div>
-         
-         <div class="col-lg-6 mb-4">
-            <div class="card">
-               <div class="card-body">
-                  <h5 class="card-title">{{nome_moeda}} - {{par_moedas}} /  {{qtd_dias}} dias</h5>
-                  <div id="chart" >
-                  </div>
-                  Exibição em Apex Chart
-               </div>
-            </div>
-         </div>
-      </div>
-
-
-      <div class="col-12">
-         <div class="card">
-            <div class="card-body">
-               <h5 class="card-title">Selecione outra moeda e/ou período para exibição</h5>
                <div class="container">
                   <form action="{% url 'cotacoes:home'  %}">
                   <div class="form-row">
                      <div class="form-group col-md-4">
-                        <label for="par_moedas_form">Moeda</label>
+
 
                         <select name="par_moedas_form" id="par_moedas_form" class="form-control">
                            {% for par in pares %}
@@ -59,7 +25,7 @@
                         </select>
                      </div>
                      <div class="form-group col-md-4">
-                        <label for="dias_form">Dias</label>
+
                         <select name="dias_form" id="dias_form" class="form-control">
                                  <option value="5">5</option>
                                  <option value="10">10</option>
@@ -70,17 +36,61 @@
                                  <option value="180">180</option>
                         </select>
                      </div>
-                     <div class="col-auto">
-                        <br>
-                        <button type="submit" class="btn btn-primary mt-2">Selecionar</button>
+                     <div class=" col-md-4">
+                        <button type="submit" class="btn btn-primary">Selecionar</button>
                      </div>
                   </div>
                   </form>
                </div>
+
+
+
+
+
+
+   <!--  class oculta d-none
+      também diminuir altura
+   --> 
+   <div class="m-4">
+      <div class="row" >
+         <div class="col-md-9">
+            <div class="card">
+               <div class="card-body mb-5">
+                  <h5 class="card-title">{{nome_moeda}} - {{par_moedas}} /  {{qtd_dias}} dias</h5>
+                  
+                  <canvas id="myChart" ></canvas>
+                  <br>
+                  Exibição em Chart Js
+               </div>
+            </div>
+            <div class="card mt-4">
+               <div class="card-body">
+                  <h5 class="card-title">{{nome_moeda}} - {{par_moedas}} /  {{qtd_dias}} dias</h5>
+                  <div id="chart" >
+                  </div>
+                  Exibição em Apex Chart
+               </div>
             </div>
          </div>
+
+         <div class="col-md-3">
+            <div class="card">
+               <div class="card-body">
+                  <h5 class="card-title">Cotação atual</h5>
+                  <p class="card-text"><b>{{par_moedas}}<br>{{nome_moeda}}</b></p>
+               </div>
+               <ul class="list-group list-group-flush">
+                  <li class="list-group-item"><b>Compra:</b> {{par_atual.bid}}<br><b>Venda:</b> {{par_atual.ask}}</li>
+                  <li class="list-group-item"><b>Variação:</b> {{par_atual.pctChange}}%</li>
+                  <li class="list-group-item"><b>High:</b> {{par_atual.high}}<br><b>Low:</b> {{par_atual.low}}</li>
+                  <li class="list-group-item"> {{par_atual.create_date}}</li>
+               </ul>
+            </div>
+         </div>
+
       </div>
-      <br>
+   </div>  
+
       
    <script>
       // ChartJs 
