--- a/charts/templates/charts/pages/home.html
+++ b/charts/templates/charts/pages/home.html
@@ -1,5 +1,5 @@
 {% extends 'charts/base.html' %}
-
+{% load static %}
 {% block content %}
 
 
@@ -117,94 +117,11 @@
 </div>
 
 <!--Table cotacoes Fim --> 
-
-
-      
    <script>
-      // ChartJs 
-      var lista_datas = {{ lista_datas | safe }};
-      var lista_cotacoes = {{ lista_cotacoes | safe }};
-      //var lista_todos_cot_atual = {{ lista_todos_cot_atual | safe }};
-
-      //console.log(lista_todos_cot_atual);
-
-      const ctx = document.getElementById('myChart').getContext('2d');
-      const myChart = new Chart(ctx, {
-         type: 'line',
-         data: {
-            labels: lista_datas,
-            datasets: [{
-                  label: 'Lista Cotacoes',
-                  data: lista_cotacoes,
-                  backgroundColor: [
-                     'rgba(54, 162, 235, 0.2)',
-                  ],
-                  borderColor: [
-                     'rgba(54, 162, 235, 1)',
-                  ],
-                  pointStyle: 'circle',
-                  borderWidth: 2,
-                  pointRadius: 1,
-                  pointHoverRadius: 15
-               },
-            ]
-         },
-         options: {
-            scales: {
-               y: {
-                  beginAtZero: false
-               }
-            }
-         }
-      });
+      var lista_datas ={{ lista_datas | safe }};
+      var lista_cotacoes ={{ lista_cotacoes | safe }};
    </script>
-
-   <script>
-      // Apex Chart
-      var options = {
-         chart: {
-            type: 'line'
-         },
-         stroke: {
-            width: 2
-         },
-         series: [{
-            name: 'Cotações',
-            data: lista_cotacoes
-         }],
-         xaxis: {
-            categories: lista_datas
-         },
-
-         grid: {
-            row: {
-                  colors: ['#e5e5e5', 'transparent'],
-                  opacity: 0.5
-            }, 
-            column: {
-                  colors: ['#f8f8f8', 'transparent'],
-            }, 
-            xaxis: {
-               lines: {
-                  show: true
-               }
-            },
-            yaxis: {
-               lines: {
-                  show: true
-               }
-            },
-            padding: {
-               top: 0,
-               right: 0,
-               bottom: -30,
-               left: 0
-            }, 
-         },
-      }
-      var chart = new ApexCharts(document.querySelector("#chart"), options);
-      chart.render();
-   </script>
+   <script src="{% static 'charts/js/chart_cotacoes.js' %}">
    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
