--- a/charts/templates/charts/pages/home.html
+++ b/charts/templates/charts/pages/home.html
@@ -121,5 +121,5 @@
       var lista_datas ={{ lista_datas | safe }};
       var lista_cotacoes ={{ lista_cotacoes | safe }};
    </script>
-   <script src="{% static 'charts/js/chart_cotacoes.js' %}">
+   <script src="{% static 'charts/js/chart_cotacoes.js' %}"></script>
 {% endblock %}
